--- a/slyle.css
+++ b/slyle.css
@@ -51,7 +51,7 @@ body {
 
 .second {
   align-self: flex-start;
-  animation: second 0.4s ease-out infinite alternate;
+  animation: second 0.4s ease-in infinite alternate;
 }
 
 @keyframes ball {
